[gd_scene load_steps=11 format=3 uid="uid://c66jnigbwsp2o"]

[ext_resource type="Script" uid="uid://ci8g5apw4mql8" path="res://Scripts/Player.gd" id="1_ml8ai"]
[ext_resource type="Shader" uid="uid://dcsgrrsbwol6l" path="res://Scenes/water_submerge_player.gdshader" id="3_5ixxa"]
[ext_resource type="PackedScene" uid="uid://vuwkik87hph6" path="res://Scenes/playerHands.tscn" id="3_61yc3"]
[ext_resource type="Texture2D" uid="uid://bgj0wq6sk3u6n" path="res://Game assets for demo/shadow.png" id="4_0ecuo"]
[ext_resource type="SpriteFrames" uid="uid://b3ptis5ga616i" path="res://Scenes/player_animation.tres" id="4_tu2if"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nn08x"]
shader = ExtResource("3_5ixxa")
shader_parameter/cut_in_half = false

[sub_resource type="CircleShape2D" id="CircleShape2D_akhj4"]
radius = 8.01561

[sub_resource type="RectangleShape2D" id="RectangleShape2D_os7rs"]
size = Vector2(21, 33.5)

[sub_resource type="Gradient" id="Gradient_dewec"]
offsets = PackedFloat32Array(0, 0.68386)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5ixxa"]
gradient = SubResource("Gradient_dewec")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
visibility_layer = 4
collision_mask = 2
script = ExtResource("1_ml8ai")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-2, 10)
scale = Vector2(0.625, 0.8125)
texture = ExtResource("4_0ecuo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_nn08x")
sprite_frames = ExtResource("4_tu2if")
animation = &"player_roll"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_akhj4")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_os7rs")
metadata/_edit_lock_ = true

[node name="playerHands" parent="." instance=ExtResource("3_61yc3")]
metadata/_edit_lock_ = true

[node name="RollActive" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(3.8147e-06, -0.500003)
scale = Vector2(1.59375, 1.29688)
color = Color(1, 1, 0.584314, 1)
energy = 1.68
texture = SubResource("GradientTexture2D_5ixxa")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="RollActive" to="." method="_on_roll_active_timeout"]
